fixes h1, h2 alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,9 +45,3 @@ body {
   background-repeat:  repeat;
   background-size: 20%;
 }
-
-
-h1 {
-  font-size: 2em;
-  font-family: 'Montserrat Bold';
-}
